--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <body>
         <button onclick="displayDate()">
-     The Time Is</button>
+     TIME</button>DISCOUNT OFFERS FROM 6.00 PM - 9.00 PM
      <script>
          function displayDate()
          {
